antex-rs/tui/src/bottom_pane/snapshots/antex_tui__bottom_pane__tests__queued_messages_visible_when_status_hidden_snapshot.snap
---
source: tui/src/bottom_pane/mod.rs
assertion_line: 3120
expression: "render_snapshot(&pane, area)"
---
• Queued follow-up inputs                       
  ↳ Queued follow-up question                   
    ⌥ + ↑ edit last queued message              
                                                
 ┃ Ask Antex to do anything                     
                                                
  ? for shortcuts            100% context left
