antex-rs/tui/src/bottom_pane/snapshots/antex_tui__bottom_pane__tests__slash_command_popup_dismissed.snap
---
source: tui/src/bottom_pane/mod.rs
expression: "render_snapshot(&pane, area)"
---
• Working (0s • esc to interrupt)                           
                                                            
                                                            
 ┃ /rev                                                     
                                                            
  tab to queue message                   100% context left
