antex-rs/tui/src/bottom_pane/snapshots/antex_tui__bottom_pane__tests__status_and_composer_fill_height_without_bottom_padding.snap
---
source: tui/src/bottom_pane/mod.rs
assertion_line: 2999
expression: "render_snapshot(&pane, area)"
---
• Working (0s • esc to interr…
                              
                              
 ┃ Ask Antex to do anything   
                              
           100% context left
