antex-rs/tui/src/bottom_pane/snapshots/antex_tui__bottom_pane__tests__status_timer_survives_hidden_row.snap
---
source: tui/src/bottom_pane/mod.rs
assertion_line: 2931
expression: "render_snapshot(&pane, area)"
---
• Working (42s • esc to interrupt)      
                                        
                                        
 ┃ Ask Antex to do anything             
                                        
  ? for shortcuts    100% context left
